[gd_scene load_steps=13 format=3 uid="uid://c1smrgtchh34a"]

[ext_resource type="Script" path="res://scripts/Control.gd" id="1_fvpab"]
[ext_resource type="FontFile" uid="uid://dbe6b3qsi6067" path="res://font/RustyHooksRegular-nROER.ttf" id="2_5t6sm"]
[ext_resource type="AudioStream" uid="uid://bkx2iqw625h0i" path="res://sounds/meditate.wav" id="2_t2d1w"]
[ext_resource type="AudioStream" uid="uid://c0hk0ws3fj5wv" path="res://sounds/stop.wav" id="3_bsmbf"]
[ext_resource type="AudioStream" uid="uid://cio07lhuqq4e0" path="res://sounds/learn.wav" id="4_eqhil"]
[ext_resource type="AudioStream" uid="uid://ref11k2j3krk" path="res://sounds/start.wav" id="5_rbhgt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8b82"]
bg_color = Color(0.521569, 0.462745, 0.501961, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q317x"]
bg_color = Color(0.682353, 0.560784, 0.607843, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at7bn"]
bg_color = Color(0.584314, 0.694118, 0.74902, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_4nf8v"]
Button/colors/font_outline_color = Color(0.341176, 0.258824, 0.486275, 1)
Button/colors/font_pressed_color = Color(0.337255, 0.160784, 0.286275, 1)
Button/styles/hover = SubResource("StyleBoxFlat_w8b82")
Button/styles/normal = SubResource("StyleBoxFlat_q317x")
Button/styles/pressed = SubResource("StyleBoxFlat_at7bn")

[sub_resource type="LabelSettings" id="LabelSettings_syrel"]
font = ExtResource("2_5t6sm")
font_size = 70

[sub_resource type="Theme" id="Theme_wtgqy"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_4nf8v")
script = ExtResource("1_fvpab")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 80.0
offset_right = 248.0
offset_bottom = 272.0
label_settings = SubResource("LabelSettings_syrel")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 272.0
offset_right = 248.0
offset_bottom = 400.0
theme = SubResource("Theme_wtgqy")
text = "START"

[node name="ResetButton" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 8.0
offset_right = 184.0
offset_bottom = 72.0
text = "RESET"

[node name="StopButton" type="Button" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 408.0
offset_right = 248.0
offset_bottom = 536.0
text = "STOP"

[node name="Timer" type="Timer" parent="."]

[node name="Meditate" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_t2d1w")

[node name="Stop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bsmbf")

[node name="Learn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_eqhil")

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rbhgt")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
